Todas las teclas que están en la calculadora hasta el momento sirven.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Calcu-Proyecto-UX",
   "version": "0.0.1",
   "private": true,
+  "react": "^15.3.1",
   "dependencies": {
     "@capacitor/android": "4.7.0",
     "@capacitor/app": "4.1.1",
@@ -16,12 +17,13 @@
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.15",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
+    "mathjs": "^11.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
