--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mathjs": "^11.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-mathjax": "^1.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
