--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
         "react-dom": "^18.2.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "^5.0.1",
         "typescript": "^4.1.3",
         "web-vitals": "^0.2.4",
         "workbox-background-sync": "^5.1.4",
@@ -86,7 +85,8 @@
         "@types/babel__core": "^7.20.0",
         "babel-jest": "^29.5.0",
         "gh-pages": "^5.0.0",
-        "jest": "^27.5.1"
+        "jest": "^27.5.1",
+        "react-scripts": "5.0.1"
     },
     "description": "An Ionic project",
     "plugins": [
